syntax = "proto3";

package client_user;

message SignUpRequest{
    string email=1;
    string password=2;
}

message SignUpResponse{
    string userId=1;
}

service ClientToUser {
    rpc SignUp(SignUpRequest) returns (SignUpResponse) {};
} 